--- a/LeatletDemo/index.html
+++ b/LeatletDemo/index.html
@@ -25,9 +25,11 @@
 		<script src="js/leafletPlugins/coordtransforms.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/transObjs.js" type="text/javascript" charset="utf-8"></script>
 		
-		<script src="js/Hykj/Hykj_TrackLineLayer.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/Hykj/Hykj_TrackLineClass.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/TestLayerControl.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Hykj/ContourLine/PointInfoClass.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Hykj/ContourLine/GridClass.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Hykj/ContourLine/ContourLine.js" type="text/javascript" charset="utf-8"></script>
+		
+		<script src="js/TestIsoline.js" type="text/javascript" charset="utf-8"></script>
 		<style type="text/css">
 			#map { height: 800px; }
 		</style>
@@ -37,6 +39,5 @@
 	</body>
 	<script type="text/javascript">
 		LeafletMap.InitMap();
-		<!--LeafletMap.ShowTrackLineLyr(1);-->
 	</script>
 </html>
