PointInfo重新定义，等值线算法初步添加。

--- a/LeatletDemo/index.html
+++ b/LeatletDemo/index.html
@@ -27,7 +27,11 @@
 		
 		<script src="js/Hykj/ContourLine/PointInfoClass.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/ContourLine/GridClass.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Hykj/ContourLine/IsoSurface.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/ContourLine/ContourLine.js" type="text/javascript" charset="utf-8"></script>
+		
+		<script src="js/Hykj/ContourLine/PointAndGrid.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/Hykj/ContourLine/Isoline.js" type="text/javascript" charset="utf-8"></script>
 		
 		<script src="js/TestIsoline.js" type="text/javascript" charset="utf-8"></script>
 		<style type="text/css">
