--- a/LeatletDemo/index.html
+++ b/LeatletDemo/index.html
@@ -41,6 +41,11 @@
 		<div id="map"></div>
 	</body>
 	<script type="text/javascript">
+		var a = new TestObj('a');
+		var b = new TestObj('b');
+		
+		a.sayName();
+		b.sayName();
 		LeafletMap.InitMap();
 	</script>
 </html>
