三角构网算法移植失败。 采用网格方法生成等值线，并添加了标注的内容。目前标注的效果没做测试，等明天李战来测试。

--- a/LeatletDemo/index.html
+++ b/LeatletDemo/index.html
@@ -29,7 +29,7 @@
 		<script src="js/Hykj/ContourLine/GridClass.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/ContourLine/IsoSurface.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/ContourLine/ContourLine.js" type="text/javascript" charset="utf-8"></script>
-		
+		<script src="js/Hykj/ContourLine/Delauney.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/Hykj/ContourLine/GridIsoLine.js" type="text/javascript" charset="utf-8"></script>
 		
 		<script src="js/TestIsoline.js" type="text/javascript" charset="utf-8"></script>
